	'tests/sytone.cpp'.
2015-03-18 Fred Gleason <fredg@paravelsystems.com>
	* Moved 'Switchyard.pc.in' to 'switchyard.pc.in'.
	* Added a 'SyClock::watchdogChanged()' signal in 'sy/syclock.cpp'
	and 'sy/syclock.h'.
2015-03-22 Fred Gleason <fredg@paravelsystems.com>
	* Changed RTP callback signature in 'sy/rtp_server.h'.
2015-03-23 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library version to 1:0:1.
	* Incremented the package version to 0.9.0.
2015-03-25 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'const char *modver' parameter to the constructor of
	'LwCmdSwitch' in 'sy/lwcmdswitch.cpp' and 'sy/lwcmdswitch.h'.
2015-03-25 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'SyRouting::streamAddress()' method in 'sy/syrouting.cpp'
	and 'sy/syrouting.h'.
2015-03-25 Fred Gleason <fredg@paravelsystems.com>
	* Added an 'SyLwrpClient' class in 'sy/sylwrp_client.cpp' and
	'sy/sylwrp_client.h'.
	* Added an 'SySource' class in 'sy/sysource.cpp' and 'sy/sysource.h'.
	* Added an 'SyDestination' class in 'sy/sydestination.cpp' and
	'sy/sydestination.h'.
2015-03-27 Fred Gleason <fredg@paravelsystems.com>
	* Added 'SyLwrpClient::srcChannels()',
	'SyLwrpClient::setSrcChannels()', 'SyLwrpClient::srcPacketSize()',
	'SyLwrpClient::setSrcPacketSize()', 'SyLwrpClient::srcShareable()',
	'SyLwrpClient::setSrcShareable()', 'SyLwrpClient::dstChannels()' and
	'SyLwrpClient::setChannels()' methods.
	* Implemented an 'IFC' [Interface Address] LWRP command in
	'sy/sylwrp_server.cpp' and 'sy/lwrp_server.h'.
2015-03-28 Fred Gleason <fredg@paravelsystems.com>
	* Modifed the 'LWRP' field in the 'VER' command to return
	SWITCHYARD_PROTOCOL_VERSION.
2015-03-28 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a fencepost error when determining maximum slot count
	in 'sy/syrouting.cpp'.
2015-03-29 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.10.0.
2015-04-04 Fred Gleason <fredg@paravelsystems.com>
	* Cleaned up warning in 'tests/sytone.cpp'.