@@ -21,7 +21,7 @@
 #define SWITCHYARD_GPIO_GPO_PORT 2060
 #define SWITCHYARD_HWID 0xFFFF
 #define SWITCHYARD_LWRP_PORT 93
-#define SWITCHYARD_MAX_SLOTS 8
+#define SWITCHYARD_MAX_SLOTS 32
 #define SWITCHYARD_MAX_CHANNELS 2
 #define SWITCHYARD_PROTOCOL_VERSION "1.1"
 #define SWITCHYARD_CACHE_DIR "/var/cache/aoip"
